Fix .aligncenter

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -488,7 +488,7 @@ pre {
 	/*TODO*/
 }
 
-.aligncenter { text-align: center; }
+.aligncenter { margin: 0 auto; }
 .alignleft { float: left; margin: 10px }
 .alignright { float: right; margin: 10px; }
 
